# num_monitor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  start.sh
app/: CMakeLists.txt
app/num_monitor/: CMakeLists.txt
doc/: gdb.md  ubuntu-18.04-build-env.md
hbapp/: CMakeLists.txt
hbapp/num_monitor/: monitor.cpp
hbapp/qdii_monitor/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
plugins/monitor_price_plugin/: CMakeLists.txt  monitor_pairs.cpp  monitor_price_plugin.cpp  monitor_price_plugin_impl.cpp  monitor_singles.cpp  monitor_targets.cpp
plugins/monitor_price_plugin/include/hb/monitor_price_plugin/: monitor_pairs.h  monitor_price_error.h  monitor_price_plugin.h  monitor_price_plugin_impl.h  monitor_singles.h  monitor_targets.h
plugins/qdii_monitor_plugin/: CMakeLists.txt  monitor_pairs.cpp  monitor_singles.cpp  monitor_targets.cpp  qdii_monitor_plugin.cpp  qdii_monitor_plugin_impl.cpp
plugins/qdii_monitor_plugin/include/hb/qdii_monitor_plugin/: monitor_pairs.h  monitor_singles.h  monitor_targets.h  qdii_monitor_error.h  qdii_monitor_plugin.h  qdii_monitor_plugin_impl.h
test_data/config/: coinfig.eos.ini  config.ini  logging.ini  monitor.ini  monitor1.ini  qdii.ini
